@@ -1,3 +1,9 @@
+2019-02-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/ralloc.c,
+	  support/regression/tests/bug-2031.c:
+	  Allow rematerialization of pointer-to-integer cast, fixes a gbz80 initialization bug.
+
 2019-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>
 
 	* src/SDCCicode.c: fix bug #2829
